--- a/sakila.ipynb
+++ b/sakila.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlXm+Ufb+j74ouPMrH2KIh",
+      "authorship_tag": "ABX9TyNeMJ0bIJdUsQPpivH7E5iw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -411,12 +411,12 @@
         "create table dimDate\n",
         "(\n",
         "\tdate_key integer not null primary key,\n",
-        "\tdate date not null,\n",
-        "\tyear smallint not null,\n",
-        "\tquarter smallint not null,\n",
-        "\tmonth smallint not null,\n",
-        "\tday smallint not null,\n",
-        "\tweek smallint not null,\n",
+        "\tdate_ date not null,\n",
+        "\tyear_ smallint not null,\n",
+        "\tquarter_ smallint not null,\n",
+        "\tmonth_ smallint not null,\n",
+        "\tday_ smallint not null,\n",
+        "\tweek_ smallint not null,\n",
         "\tis_weekend boolean\n",
         ");\n",
         "\"\"\"\n",
@@ -578,7 +578,7 @@
       "cell_type": "code",
       "source": [
         "date_etl_query = \"\"\"\n",
-        "INSERT INTO dimDate (date_key, date, year, quarter, month, day, week, is_weekend)\n",
+        "INSERT INTO dimDate (date_key, date_, year_, quarter_, month_, day_, week_, is_weekend)\n",
         "SELECT distinct(unix_timestamp(payment_date))                     AS date_key,\n",
         "       date(payment_date)                                           AS date,\n",
         "       EXTRACT(year FROM payment_date)                              AS year,\n",
@@ -846,8 +846,7 @@
         "cursor.execute(top_gross_city)\n",
         "result = cursor.fetchmany(10)\n",
         "for record in result:\n",
-        "  print(record)\n",
-        ""
+        "  print(record)\n"
       ],
       "metadata": {
         "id": "I1nr5jq7p7mn"
@@ -872,7 +871,7 @@
         "  dm.title as movie,\n",
         "  dc.city as city,\n",
         "  concat_ws(' ', dc.first_name, dc.last_name) as customer,\n",
-        "  dd.month as month,\n",
+        "  dd.month_ as month,\n",
         "  sum(fs.sales_amount) as revenue\n",
         "from factSales as fs\n",
         "inner join dimMovie as dm on fs.movie_key = dm.movie_key\n",
@@ -893,10 +892,216 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# OLAP Work\n"
+      ],
+      "metadata": {
+        "id": "CoUO8WdBjWmd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Roll Up\n",
+        "Calculates revenue sales by day rating and country. We are interested in country associated with the customer purchasing the movie."
+      ],
+      "metadata": {
+        "id": "3rGmFoj-japZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Need to use sales, movie, date, and customer table\n",
+        "roll_up = \"\"\"\n",
+        "select\n",
+        "\tdd.day_ as day,\n",
+        "\tdm.rating as rating,\n",
+        "\tdc.country as country,\n",
+        "\tsum(fs.sales_amount) as revenue\n",
+        "from factSales as fs\n",
+        "inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "inner join dimMovie as dm on dm.movie_key = fs.movie_key\n",
+        "inner join dimCustomer as dc on dc.customer_key = fs.customer_key\n",
+        "group by day, rating, country\n",
+        "order by revenue desc\n",
+        "limit 20;\n",
+        "\"\"\"\n",
+        "cursor.execute(roll_up)\n",
+        "result = cursor.fetchmany(10)\n",
+        "for record in result:\n",
+        "  print(record)\n",
+        "\n",
+        "# Could also use query below by joining store table instead of customer. This will breakdown by country\n",
+        "# where customer bought rather store sold.\n",
+        "# select\n",
+        "#   dd.day_ as day,\n",
+        "#   dm.rating as rating,\n",
+        "#   ds.country as country,\n",
+        "#   sum(fs.sales_amount) as revenue\n",
+        "# from factSales as fs\n",
+        "# inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "# inner join dimMovie as dm on dm.movie_key = fs.movie_key\n",
+        "# inner join dimStore as ds on ds.store_key  = fs.store_key\n",
+        "# group by day, rating, country\n",
+        "# order by revenue desc"
+      ],
       "metadata": {
         "id": "EEbVnvwztAcf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Drill Down\n"
+      ],
+      "metadata": {
+        "id": "PTwMQXt6u-lp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drill_down = \"\"\"\n",
+        "select\n",
+        "\tdd.day_ as day,\n",
+        "\tdm.rating as rating,\n",
+        "\tdc.district  as district,\n",
+        "\tsum(fs.sales_amount) as revenue\n",
+        "from factSales as fs\n",
+        "inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "inner join dimMovie as dm on dm.movie_key = fs.movie_key\n",
+        "inner join dimCustomer as dc on dc.customer_key  = fs.customer_key\n",
+        "group by day, rating, district\n",
+        "order by revenue desc\n",
+        "\"\"\"\n",
+        "cursor.execute(drill_down)\n",
+        "result = cursor.fetchmany(10)\n",
+        "for record in result:\n",
+        "  print(record)\n"
+      ],
+      "metadata": {
+        "id": "_2w6K0PUrKY8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Slice\n",
+        "\n",
+        "Calculates revenue sales by day rating and country and slices the ratings dimension by looking at only PG-13 rated movies."
+      ],
+      "metadata": {
+        "id": "WcHFmh2dy5zc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "slice_ratings = \"\"\"\n",
+        "select\n",
+        "\tdd.day_ as day,\n",
+        "\tdm.rating as rating,\n",
+        "\tdc.country as country,\n",
+        "\tsum(fs.sales_amount) as revenue\n",
+        "from factSales as fs\n",
+        "inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "inner join dimMovie as dm on dm.movie_key = fs.movie_key\n",
+        "inner join dimCustomer as dc on dc.customer_key  = fs.customer_key\n",
+        "where dm.rating = \"PG-13\"\n",
+        "group by day, rating, country\n",
+        "order by revenue desc\n",
+        "limit 20;\n",
+        "\"\"\"\n",
+        "cursor.execute(slice_ratings)\n",
+        "result = cursor.fetchmany(10)\n",
+        "for record in result:\n",
+        "  print(record)"
+      ],
+      "metadata": {
+        "id": "2ZYPKcxSvulV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dice"
+      ],
+      "metadata": {
+        "id": "lYuvxp9604lO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dice = \"\"\"\n",
+        "select\n",
+        "\tdd.day_ as day,\n",
+        "\tdm.rating as rating,\n",
+        "\tdc.country as country,\n",
+        "\tsum(fs.sales_amount) as revenue\n",
+        "from factSales as fs\n",
+        "inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "inner join dimMovie as dm on dm.movie_key = fs.movie_key\n",
+        "inner join dimCustomer as dc on dc.customer_key  = fs.customer_key\n",
+        "where\n",
+        "\tdm.rating in (\"PG-13\", \"PG\") and\n",
+        "\tdc.city in (\"Bellevue\", \"Lancaster\") and\n",
+        "\tdd.day_ in (1, 15, 30)\n",
+        "group by day, rating, country\n",
+        "order by revenue desc\n",
+        "limit 20;\n",
+        "\"\"\"\n",
+        "cursor.execute(dice)\n",
+        "result = cursor.fetchmany(10)\n",
+        "for record in result:\n",
+        "  print(record)"
+      ],
+      "metadata": {
+        "id": "DRMHBYQTy4VS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Grouping Sets\n",
+        "\n",
+        "Rollup month and country when performing group by."
+      ],
+      "metadata": {
+        "id": "iPPkuky17-t7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "group_sets = \"\"\"\n",
+        "select\n",
+        "\tdd.month_ as month,\n",
+        "\tdc.country as country,\n",
+        "\tsum(fs.sales_amount) as revenue\n",
+        "from factSales as fs\n",
+        "inner join dimDate as dd on fs.date_key = dd.date_key\n",
+        "inner join dimCustomer as dc on fs.customer_key = dc.customer_key\n",
+        "group by month, country with rollup\n",
+        "order by revenue desc;\n",
+        "\"\"\"\n",
+        "cursor.execute(group_sets)\n",
+        "result = cursor.fetchmany(10)\n",
+        "for record in result:\n",
+        "  print(record)"
+      ],
+      "metadata": {
+        "id": "2N5i6utw0noy"
       },
       "execution_count": null,
       "outputs": []
